--- a/src/Views/contest.phtml
+++ b/src/Views/contest.phtml
@@ -1,37 +1,48 @@
 <?= ViewLoader::load('breadcrumb', array('items' => array((object)array('active' => true, 'title' => 'Home'), (object)array('title' => 'Contest')))) ?>
 <div class="container">
     <div class="hero-unit">
-        <h1><span class="raleway">Psy&Prog</span>.Contest</h1>
-        <p><strong>Take the chance to get your track published on all major online platforms!</strong></p>
+        <h1><span class="raleway">Early Morning</span> Remix Contest</h1>
+        <p><strong>Take the chance to get your Remix published on all major stores!</strong></p>
     </div>
 	
 	<div class="hero-unit">
+		<h4>The original mix</h4>
+		<p>
+			<iframe width="100%" height="350" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/245564006&amp;auto_play=true&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;show_reposts=true&amp;visual=true&amp;color=0066cc"></iframe>
+		</p>
+
 		<h4>How to participate?</h4>
 		<ul class="light">
-			<li>Upload your track on Soundcloud</li>
-			<li>Add it to <a target="_blank" href="//soundcloud.com/groups/3886records-prog-psy-goa-contest">this Soundcloud group</a></li>
+			<li>Download the Remix Pack <a href="https://www.dropbox.com/s/ebpzedmz7dc1jfu/Psypek%20Early%20Morning%20RMX%20Pack.rar?dl=1">here</a></li>
+			<li>Add it to <a target="_blank" href="https://soundcloud.com/groups/psypek-early-morning-remix-contest">this Soundcloud group</a></li>
 			<li>Wait for approval</li>
 		</ul>
 		
 		<h4>The rules</h4>
 		<ul class="light">
-			<li>The genre must be Progressive Trance, Psytrance, Goatrance or a mix of them</li>
-			<li>The track must be uploaded until December 31th 2013</li>
-			<li>The track must not be released or signed by another label</li>
-			<li>The Track must be an original (no remixes)</li>
-			<li>The artist must hold all rights on the track and not violate the rights of any third person</li>
+			<li>The genre must be Progressive Trance, Psytrance or Goatrance</li>
+			<li>The track must be added to the group until June 30th 2016</li>
+			<li>The track must not have a download option for the public</li>
+			<li>The artist must not violate the rights of any third person</li>
+			<li>The rights of the remixes belong to 3886records</li>
+			<li>The remixes must not be released via another label</li>
 		</ul>
 		<br/>
 		
 		<h4>Deadline</h4>
 		<ul class="light">
-			<li>December 31st 2013. Be sure to submit your finished Track until the end of the year!</li>
+			<li>June 30th 2016. Be sure to add your finished Track to the group until then!</li>
 		</ul>
 		<br/>
 
 		<h4>The prize</h4>
 		<ul class="light">
-			<li>The winning track(s) will be released via 3886records. Good luck!</li>
+			<li>The winning remix(es) will be released via 3886records. Also the winning artists will be offered to become members of Thirtyeight Eightysix Records and therefore release more of their music. Good luck!</li>
 		</ul>		
+
+		<h4>Submitted Remixes</h4>
+		<p>
+			<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/groups/250739&amp;color=0066cc&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;show_reposts=false"></iframe>
+		</p>
 	</div>
 </div>
