--- a/src/Views/profile_edit.phtml
+++ b/src/Views/profile_edit.phtml
@@ -122,7 +122,7 @@
 
 		  <hr>
 
-		  <p><strong>Peronal Data</strong> <span style="font-size: 12px;">(internal usage only)</span></p>
+		  <p><strong>Personal Data</strong> <span style="font-size: 12px;">(internal usage only)</span></p>
 
 		  <div class="control-group form-group<?= isset($errors['firstname']) ? ' has-error' : '' ?>">
 		    <label for="firstname" class="col-sm-2 control-label">Firstname:</label>
@@ -181,7 +181,7 @@
 		  
 		  <hr>
 
-		  <p><strong>Personal Fees</strong> <span style="font-size: 12px;">(desired and minimum fees in €)</span></p>
+		  <p><strong>Personal Fees</strong> <span style="font-size: 12px;">(desired and minimum fees in € without costs for travel/arival)</span></p>
 
 		  <div class="control-group form-group<?= isset($errors['fee_dj_desired']) ? ' has-error' : '' ?>">
 		    <label for="fee_dj_desired" class="col-sm-2 control-label">DJ Fee desired:</label>
