--- a/src/Views/navigation.phtml
+++ b/src/Views/navigation.phtml
@@ -19,9 +19,10 @@
   <li class="dropdown"><a href="/artists" class="dropdown-toggle" data-toggle="dropdown"><span><i class="icon-star"></i></span> Artists <b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a data-method="async" href="/artists">Artist overview</a></li>
+      <li><a data-method="async" href="/artists?former=1">Former artists</a></li>
       <li class="divider"></li>
     <? foreach ($artists as $artist): ?>
-    <li><a data-method="async" href="/artist/<?= $artist->key ?>" style="<?= ($artist->is_topact ? 'font-weight: bold;' : '') ?>"><?= $artist->name ?> <? if ($artist->is_topact): ?><i class="icon-star"></i><? endif ?></a></li>
+    <li><a data-method="async" href="/artist/<?= $artist->key ?>" style="<?= ($artist->is_topact ? 'font-weight: bold;' : '') ?>"><?= $artist->name ?> <? if ($artist->is_topact): ?><i class="icon-star" title="Top Act" style="cursor: help;"></i><? endif ?></a></li>
     <? endforeach ?>
     </ul>
   </li>
@@ -33,7 +34,7 @@
       <li><a data-method="async" href="/djs">DJ overview</a></li>
       <li class="divider"></li>
     <? foreach ($djs as $dj): ?>
-    <li><a data-method="async" href="/dj/<?= $dj->key ?>" style="<?= ($dj->is_topact ? 'font-weight: bold;' : '') ?>"><?= $dj->name ?>  <? if ($dj->is_topact): ?><i class="icon-star"></i><? endif ?></a></li>
+    <li><a data-method="async" href="/dj/<?= $dj->key ?>" style="<?= ($dj->is_topact ? 'font-weight: bold;' : '') ?>"><?= $dj->name ?>  <? if ($dj->is_topact): ?><i class="icon-star" title="Top Act" style="cursor: help;"></i><? endif ?></a></li>
     <? endforeach ?>
     </ul>
   </li>
@@ -54,13 +55,18 @@
   <? if (null === $user): ?>
     <li><a href="/login" data-method="async"><span><i class="icon-user"></i></span> Login</a></li>
   <? else: ?>
-    <li class="dropdown"><a href="/profile" class="dropdown-toggle" data-toggle="dropdown"><span><i class="icon-user"></i></span> Profile <b class="caret"></b></a>
+    <li class="dropdown"><a href="/profile" class="dropdown-toggle" data-toggle="dropdown"><span><i class="icon-user"></i></span> Account <b class="caret"></b></a>
       <ul class="dropdown-menu">
-        <li><a data-method="async" href="/profile">My Profile</a></li>
-        <li><a data-method="async" href="/profile/edit">Edit Profile</a></li>
+        <li><a data-method="async" href="/profile">Overview</a></li>
+        <? if ($user->artist_id): ?>
+        	<li><a data-method="async" href="/profile/edit">Edit Profile</a></li>
+        <? endif ?>
         <li><a data-method="async" href="/event/add">Add Event</a></li>
-        <? if ($user->rights == 1): ?>
+        <? if ($user->rights & \Models\User::RIGHT_SIGNUPCODES): ?>
           <li><a data-method="async" href="/profile/signupcodes">Signup Codes</a></li>
+        <? endif ?>
+        <? if ($user->rights & \Models\User::RIGHT_BOOKINGMANAGER): ?>
+          <li><a data-method="async" href="/bookingmanager">Booking Management</a></li>
         <? endif ?>
         <li><a href="/logout">Logout</a></li>
       </ul>
